# project-mirage

project-mirage/: LICENSE  Makefile  README.md  demo_phase_01.py
project-mirage/common/proto/: mirage.proto
project-mirage/docs/: DEVELOPMENT.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  STATUS.md
project-mirage/linux-host/: Cargo.toml  build.rs
project-mirage/linux-host/src/: capture.rs  config.rs  discovery.rs  input.rs  main.rs  network.rs  security.rs  session.rs
project-mirage/windows-peer/: mirage_peer.py  requirements.txt
