[package]
name = "mirage-host"
version = "0.1.0"
edition = "2021"
authors = ["Project Mirage Contributors"]
license = "MIT"
description = "Linux host daemon for Project Mirage - Cross-OS distributed window interaction"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
quinn = "0.10"  # QUIC protocol
webrtc = "0.9"  # WebRTC for streaming
mdns-sd = "0.10"  # mDNS service discovery

# Serialization
prost = "0.12"  # Protocol buffers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Input handling (Linux-specific)
input = "0.8"  # libinput wrapper
evdev = "0.12"  # Linux input event devices
uinput = "0.1"  # Create virtual input devices

# Wayland
wayland-client = "0.31"
wayland-protocols = "0.31"

# Video capture and encoding
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-video = "0.21"

# Security
rustls = "0.21"
ring = "0.17"
x509-parser = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
parking_lot = "0.12"
once_cell = "1.19"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Additional dependencies
shellexpand = "3.1"
hostname = "0.3"
local-ip-address = "0.5"

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
